# witness

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
launchd/: com.witness.daemon.plist  com.witness.tray.plist
mac/: .gitignore  build.sh  witness-audiotap  witness-audiotap.swift
scripts/: backfill_self_email.py  fake-remote-speakers.sh  install-mac.sh
skills/: README.md
skills/meetings-action-items/: SKILL.md
skills/meetings-on-topic/: SKILL.md
skills/meetings-search/: SKILL.md
skills/meetings-week/: SKILL.md
src/cli/: witness.py
src/tray/: indicator.py
src/witness/: __main__.py  fingerprint.py  identify.py  pipeline.py  render.py  summarize.py
src/witnessd/: _platform.py  _platform_darwin.py  _platform_linux.py  calendar.py  config.py  daemon.py  deepgram_live.py  detect.py  record.py  session.py  transcript.py  webapp.py
src/witnessd/static/: app.js  index.html  style.css
systemd/: witnessd-tray.service  witnessd.service
tests/: conftest.py  test_calendar.py  test_daemon.py  test_detect.py  test_fingerprint.py  test_keyterms.py  test_platform_darwin.py  test_render.py  test_session.py  test_webapp.py
