[project]
name = "witness"
version = "0.1.0"
description = "Local-first meeting capture: audio + live transcript + post-meeting summary, no bot."
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "websockets>=12.0",
    "pystray>=0.19",
    "Pillow>=10.0",
    "anthropic>=0.39",
    "numpy>=1.26",
    "soundfile>=0.12",
    "pygobject>=3.48,<3.52",
]

[project.optional-dependencies]
# Voice fingerprinting. Heavy (torch), requires HF token + accepting the
# model terms at https://hf.co/pyannote/embedding. Install with:
#   uv sync --extra fingerprint
fingerprint = [
    "pyannote.audio>=3.1",
    "torch>=2.1",
    "torchaudio>=2.1",
    "scipy>=1.11",
    "omegaconf>=2.3",
]

[project.scripts]
witness = "cli.witness:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/witnessd", "src/witness", "src/cli", "src/tray"]

[tool.hatch.build.targets.wheel.force-include]
"src/witnessd/static" = "witnessd/static"

[tool.uv]
dev-dependencies = []
